work on menu responsiveness

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@plugin "tailwind-clamp" {
+  minsize: 360rem;
+  maxsize: 1024rem;
+}
 
 @custom-variant dark (&:is(.dark *));
 
